@@ -40,8 +40,6 @@ namespace MySql.Data.VisualStudio.Editors
       this.label2 = new System.Windows.Forms.Label();
       this.label3 = new System.Windows.Forms.Label();
       this.columnGrid = new System.Windows.Forms.DataGridView();
-      this.colGridColumn = new System.Windows.Forms.DataGridViewComboBoxColumn();
-      this.fkGridColumn = new System.Windows.Forms.DataGridViewComboBoxColumn();
       this.fkColumnsBindingSource = new System.Windows.Forms.BindingSource(this.components);
       this.closeButton = new System.Windows.Forms.Button();
       this.label5 = new System.Windows.Forms.Label();
@@ -55,6 +53,8 @@ namespace MySql.Data.VisualStudio.Editors
       this.deleteAction = new MySql.Data.VisualStudio.Editors.MyComboBox();
       this.updateAction = new MySql.Data.VisualStudio.Editors.MyComboBox();
       this.refTable = new MySql.Data.VisualStudio.Editors.MyComboBox();
+      this.colGridColumn = new System.Windows.Forms.DataGridViewComboBoxColumn();
+      this.fkGridColumn = new System.Windows.Forms.DataGridViewComboBoxColumn();
       ((System.ComponentModel.ISupportInitialize)(this.foreignKeyBindingSource)).BeginInit();
       ((System.ComponentModel.ISupportInitialize)(this.columnGrid)).BeginInit();
       ((System.ComponentModel.ISupportInitialize)(this.fkColumnsBindingSource)).BeginInit();
@@ -152,22 +152,6 @@ namespace MySql.Data.VisualStudio.Editors
       this.columnGrid.DataError += new System.Windows.Forms.DataGridViewDataErrorEventHandler(this.columnGrid_DataError);
       this.columnGrid.EditingControlShowing += new System.Windows.Forms.DataGridViewEditingControlShowingEventHandler(this.columnGrid_EditingControlShowing);
       this.columnGrid.RowValidating += new System.Windows.Forms.DataGridViewCellCancelEventHandler(this.columnGrid_RowValidating);
-      // 
-      // colGridColumn
-      // 
-      this.colGridColumn.DataPropertyName = "Column";
-      this.colGridColumn.DisplayStyle = System.Windows.Forms.DataGridViewComboBoxDisplayStyle.Nothing;
-      this.colGridColumn.DisplayStyleForCurrentCellOnly = true;
-      this.colGridColumn.HeaderText = "Column";
-      this.colGridColumn.Name = "colGridColumn";
-      // 
-      // fkGridColumn
-      // 
-      this.fkGridColumn.DataPropertyName = "ReferencedColumn";
-      this.fkGridColumn.DisplayStyle = System.Windows.Forms.DataGridViewComboBoxDisplayStyle.ComboBox;
-      this.fkGridColumn.DisplayStyleForCurrentCellOnly = true;
-      this.fkGridColumn.HeaderText = "Foreign Column";
-      this.fkGridColumn.Name = "fkGridColumn";
       // 
       // fkColumnsBindingSource
       // 
@@ -307,6 +291,22 @@ namespace MySql.Data.VisualStudio.Editors
       this.refTable.Size = new System.Drawing.Size(301, 24);
       this.refTable.TabIndex = 4;
       this.refTable.SelectedIndexChanged += new System.EventHandler(this.refTable_SelectedIndexChanged);
+      // 
+      // colGridColumn
+      // 
+      this.colGridColumn.DataPropertyName = "Column";
+      this.colGridColumn.DisplayStyle = System.Windows.Forms.DataGridViewComboBoxDisplayStyle.ComboBox;
+      this.colGridColumn.DisplayStyleForCurrentCellOnly = true;
+      this.colGridColumn.HeaderText = "Column";
+      this.colGridColumn.Name = "colGridColumn";
+      // 
+      // fkGridColumn
+      // 
+      this.fkGridColumn.DataPropertyName = "ReferencedColumn";
+      this.fkGridColumn.DisplayStyle = System.Windows.Forms.DataGridViewComboBoxDisplayStyle.ComboBox;
+      this.fkGridColumn.DisplayStyleForCurrentCellOnly = true;
+      this.fkGridColumn.HeaderText = "Foreign Column";
+      this.fkGridColumn.Name = "fkGridColumn";
       // 
       // ForeignKeyDialog
       // 
